--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1> I am Sinu Palappetty</h1>
-      <h2>I'm a Web Developer.I don't stop when I'm tired,I stop when I am done  </h2>
+      <h2>I'm Full Stack(MERN) Web Developer.</h2>
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
   </section><!-- End Hero -->
